--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^7.33.2",
     "firebase": "^10.5.2",
     "js-confetti": "^0.11.0",
+    "moment": "^2.30.1",
     "photoswipe": "^5.4.2",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
