--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.11.0",
     "@types/navermaps": "^3.7.0",
     "eslint-config-prettier": "^9.0.0",
@@ -22,10 +22,12 @@
     "moment": "^2.30.1",
     "photoswipe": "^5.4.2",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.14",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-naver-maps": "^0.1.2",
-    "react-photoswipe-gallery": "^2.2.7"
+    "react-photoswipe-gallery": "^2.2.7",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
