--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://kimdabeeb.github.io/w_invitation",
   "name": "wedding-invitation",
   "private": true,
   "version": "0.0.0",
