--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.11.0",
+    "@gsap/react": "^2.1.1",
     "@types/navermaps": "^3.7.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "firebase": "^10.5.2",
+    "gsap-trial": "^3.12.5",
     "js-confetti": "^0.11.0",
     "moment": "^2.30.1",
     "photoswipe": "^5.4.2",
