--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -30,7 +30,7 @@
     "react-awesome-reveal": "^4.2.14",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
-    "react-naver-maps": "^0.1.2",
+    "react-naver-maps": "^0.0.13",
     "react-photoswipe-gallery": "^2.2.7",
     "swiper": "^11.1.14"
   },
